--- a/package.json
+++ b/package.json
@@ -10,16 +10,11 @@
   },
   "dependencies": {
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "pinia": "^2.1.7",
-    "element-plus": "^2.6.1",
-    "axios": "^1.6.7",
-    "@element-plus/icons-vue": "^2.3.1"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "vite": "^6.2.1",
-    "sass": "^1.71.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
